force-app/main/default/objects/ssot__Referral__dlm/fields/ssot__ClientEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClientEmailAddress__c</fullName>
    <label>Client Email</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClientEmailAddress</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>