force-app/main/default/objects/ssot__Referral__dlm/fields/ssot__ClientId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClientId__c</fullName>
    <label>Client</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClientId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>