force-app/main/default/objects/ssot__Referral__dlm/fields/ssot__IsSelfReferred__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsSelfReferred__c</fullName>
    <label>Self Referred</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsSelfReferred</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>