force-app/main/default/objects/ssot__Referral__dlm/fields/ssot__OutboundSourceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__OutboundSourceId__c</fullName>
    <label>Referral Outbound Source</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OutboundSourceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>