force-app/main/default/objects/ssot__Referral__dlm/fields/ssot__ProviderPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProviderPhoneNumber__c</fullName>
    <label>Provider Phone</label>
    <length>40</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProviderPhoneNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>