force-app/main/default/objects/ssot__Referral__dlm/fields/ssot__Referral_CaseId_map_Case_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__Referral_CaseId_map_Case_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral_CaseId_map_Case_Id_N_1</label>
    <referenceTo>ssot__Case__dlm</referenceTo>
    <relationshipLabel>Referral_CaseId_map_Case_Id_N_1</relationshipLabel>
    <relationshipName>Referral_CaseId_map_Case_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>