force-app/main/default/objects/ssot__Referral__dlm/fields/ssot__ReferralDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferralDate__c</fullName>
    <label>Referral Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferralDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>