force-app/main/default/objects/ssot__Referral__dlm/fields/ssot__ReferralPriority__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferralPriority__c</fullName>
    <label>Priority</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferralPriority</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>