force-app/main/default/objects/ssot__Referral__dlm/fields/ssot__ReferralResultCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferralResultCategory__c</fullName>
    <label>Result Category</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferralResultCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>