force-app/main/default/objects/ssot__Referral__dlm/fields/ssot__ReferralSource__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferralSource__c</fullName>
    <label>Source</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferralSource</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>