force-app/main/default/objects/ssot__Referral__dlm/fields/ssot__ReferralType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferralType__c</fullName>
    <label>Referral Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferralType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>