force-app/main/default/objects/ssot__Referral__dlm/fields/ssot__ReferrerEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferrerEmailAddress__c</fullName>
    <label>Referrer Email</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferrerEmailAddress</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>