force-app/main/default/objects/ssot__Referral__dlm/fields/ssot__ReferrerPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ReferrerPhoneNumber__c</fullName>
    <label>Referrer Phone</label>
    <length>40</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ReferrerPhoneNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>