force-app/main/default/objects/ssot__Referral__dlm/fields/ssot__rel_1716668774221_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716668774221_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral_OutboundSourceId_map_Benefi_rel</label>
    <referenceTo>ssot__BenefitAssignment__dlm</referenceTo>
    <relationshipLabel>Referral_OutboundSourceId_map_Benefi_rel</relationshipLabel>
    <relationshipName>rel_1716668774221_end</relationshipName>
    <type>Lookup</type>
</CustomField>