force-app/main/default/objects/ssot__Referral__dlm/fields/ssot__rel_1718544759454_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1718544759454_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral_ReferrerId_map_AccountConta_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>Referral_ReferrerId_map_AccountConta_rel</relationshipLabel>
    <relationshipName>rel_1718544759454_end</relationshipName>
    <type>Lookup</type>
</CustomField>