force-app/main/default/objects/ssot__Referral__dlm/fields/ssot__rel_1724385572313_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1724385572313_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral_OutboundSourceId_map_Referr_rel</label>
    <referenceTo>ssot__Referral__dlm</referenceTo>
    <relationshipLabel>Referral_OutboundSourceId_map_Referr_rel</relationshipLabel>
    <relationshipName>rel_1724385572313_end</relationshipName>
    <type>Lookup</type>
</CustomField>